// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index functional Index full with object output. 1`] = `
Object {
  "1": Object {
    "0": Object {
      "0": Object {
        "swaggerSrc": Object {
          "apiBasePath": "/api",
          "apiDescription": "An example Api for example corp.",
          "apiHost": "example.com",
          "apiName": "Swagger Example APi",
          "consumes": Array [
            Object {
              "mime": Object {
                "comma": false,
                "type": "vnd.api+json",
              },
            },
          ],
          "contact": Object {
            "email": "example@example.com",
            "name": "Dave Example",
            "url": "http://example.com",
          },
          "definitions": Object {
            "items": Object {
              "example": Object {
                "properties": Object {
                  "id": Object {
                    "format": "int64",
                    "type": "integer",
                  },
                  "name": Object {
                    "type": "string",
                  },
                },
                "type": "object",
              },
              "example2": Object {
                "properties": Object {
                  "name": Object {
                    "type": "string",
                  },
                },
                "type": "object",
              },
            },
            "process": [Function],
          },
          "externalDocs": Object {
            "description": "Further api docs",
            "url": "http://example.com/docs",
          },
          "license": Object {
            "name": "apache 2.0",
            "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
          },
          "parameters": Object {
            "items": Object {
              "skipParam": Object {
                "description": "number of items to skip",
                "format": "int32",
                "in": "query",
                "name": "skip",
                "required": true,
                "type": "integer",
              },
            },
            "process": [Function],
          },
          "produces": Array [
            Object {
              "mime": Object {
                "comma": false,
                "type": "vnd.api+json",
              },
            },
          ],
          "responses": Object {
            "items": Object {
              "GeneralError": Object {
                "description": "General Error",
              },
              "IllegalInput": Object {
                "description": "Illegal input for operation.",
              },
              "notFound": Object {
                "description": "Entity not found.",
              },
            },
            "process": [Function],
          },
          "schemes": Object {
            "items": Array [
              "https",
              "http",
            ],
            "process": [Function],
          },
          "security": Object {
            "items": Object {
              "petstore_auth": Array [
                "write:pets",
                "read:pets",
              ],
            },
            "process": [Function],
          },
          "securityDefinitions": Object {
            "items": Object {
              "api_key": Object {
                "in": "header",
                "name": "api_key",
                "type": "apiKey",
              },
              "petstore_auth": Object {
                "authorizationUrl": "http://swagger.io/api/oauth/dialog",
                "flow": "implicit",
                "scopes": Object {
                  "read.pets": "read your pets",
                  "write.pets": "modify pets in your account",
                },
                "type": "oauth2",
              },
            },
            "process": [Function],
          },
          "tags": Object {
            "items": Array [
              Object {
                "description": "Pets operations",
                "externalDocs": Object {
                  "description": "pet docs",
                  "url": "http://example.com/pet",
                },
                "name": "pet",
              },
              Object {
                "description": "Vegetable",
                "name": "carrot",
              },
            ],
            "process": [Function],
          },
          "termsOfService": "",
        },
      },
    },
    "1": Object {
      "0": Object {
        "swaggerSrc": Object {
          "apiBasePath": "/api",
          "apiDescription": "An example Api for example corp.",
          "apiHost": "example.com",
          "apiName": "Swagger Example APi",
          "consumes": Array [
            Object {
              "mime": Object {
                "comma": false,
                "type": "vnd.api+json",
              },
            },
          ],
          "contact": Object {
            "email": "example@example.com",
            "name": "Dave Example",
            "url": "http://example.com",
          },
          "definitions": Object {
            "items": Object {
              "example": Object {
                "properties": Object {
                  "id": Object {
                    "format": "int64",
                    "type": "integer",
                  },
                  "name": Object {
                    "type": "string",
                  },
                },
                "type": "object",
              },
              "example2": Object {
                "properties": Object {
                  "name": Object {
                    "type": "string",
                  },
                },
                "type": "object",
              },
            },
            "process": [Function],
          },
          "externalDocs": Object {
            "description": "Further api docs",
            "url": "http://example.com/docs",
          },
          "license": Object {
            "name": "apache 2.0",
            "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
          },
          "parameters": Object {
            "items": Object {
              "skipParam": Object {
                "description": "number of items to skip",
                "format": "int32",
                "in": "query",
                "name": "skip",
                "required": true,
                "type": "integer",
              },
            },
            "process": [Function],
          },
          "produces": Array [
            Object {
              "mime": Object {
                "comma": false,
                "type": "vnd.api+json",
              },
            },
          ],
          "responses": Object {
            "items": Object {
              "GeneralError": Object {
                "description": "General Error",
              },
              "IllegalInput": Object {
                "description": "Illegal input for operation.",
              },
              "notFound": Object {
                "description": "Entity not found.",
              },
            },
            "process": [Function],
          },
          "schemes": Object {
            "items": Array [
              "https",
              "http",
            ],
            "process": [Function],
          },
          "security": Object {
            "items": Object {
              "petstore_auth": Array [
                "write:pets",
                "read:pets",
              ],
            },
            "process": [Function],
          },
          "securityDefinitions": Object {
            "items": Object {
              "api_key": Object {
                "in": "header",
                "name": "api_key",
                "type": "apiKey",
              },
              "petstore_auth": Object {
                "authorizationUrl": "http://swagger.io/api/oauth/dialog",
                "flow": "implicit",
                "scopes": Object {
                  "read.pets": "read your pets",
                  "write.pets": "modify pets in your account",
                },
                "type": "oauth2",
              },
            },
            "process": [Function],
          },
          "tags": Object {
            "items": Array [
              Object {
                "description": "Pets operations",
                "externalDocs": Object {
                  "description": "pet docs",
                  "url": "http://example.com/pet",
                },
                "name": "pet",
              },
              Object {
                "description": "Vegetable",
                "name": "carrot",
              },
            ],
            "process": [Function],
          },
          "termsOfService": "",
        },
      },
      "1": Object {
        "swaggerSrc": Object {
          "apiBasePath": "/api",
          "apiDescription": "An example Api for example corp.",
          "apiHost": "example.com",
          "apiName": "Swagger Example APi",
          "consumes": Array [
            Object {
              "mime": Object {
                "comma": false,
                "type": "vnd.api+json",
              },
            },
          ],
          "contact": Object {
            "email": "example@example.com",
            "name": "Dave Example",
            "url": "http://example.com",
          },
          "definitions": Object {
            "items": Object {
              "example": Object {
                "properties": Object {
                  "id": Object {
                    "format": "int64",
                    "type": "integer",
                  },
                  "name": Object {
                    "type": "string",
                  },
                },
                "type": "object",
              },
              "example2": Object {
                "properties": Object {
                  "name": Object {
                    "type": "string",
                  },
                },
                "type": "object",
              },
            },
            "process": [Function],
          },
          "externalDocs": Object {
            "description": "Further api docs",
            "url": "http://example.com/docs",
          },
          "license": Object {
            "name": "apache 2.0",
            "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
          },
          "parameters": Object {
            "items": Object {
              "skipParam": Object {
                "description": "number of items to skip",
                "format": "int32",
                "in": "query",
                "name": "skip",
                "required": true,
                "type": "integer",
              },
            },
            "process": [Function],
          },
          "produces": Array [
            Object {
              "mime": Object {
                "comma": false,
                "type": "vnd.api+json",
              },
            },
          ],
          "responses": Object {
            "items": Object {
              "GeneralError": Object {
                "description": "General Error",
              },
              "IllegalInput": Object {
                "description": "Illegal input for operation.",
              },
              "notFound": Object {
                "description": "Entity not found.",
              },
            },
            "process": [Function],
          },
          "schemes": Object {
            "items": Array [
              "https",
              "http",
            ],
            "process": [Function],
          },
          "security": Object {
            "items": Object {
              "petstore_auth": Array [
                "write:pets",
                "read:pets",
              ],
            },
            "process": [Function],
          },
          "securityDefinitions": Object {
            "items": Object {
              "api_key": Object {
                "in": "header",
                "name": "api_key",
                "type": "apiKey",
              },
              "petstore_auth": Object {
                "authorizationUrl": "http://swagger.io/api/oauth/dialog",
                "flow": "implicit",
                "scopes": Object {
                  "read.pets": "read your pets",
                  "write.pets": "modify pets in your account",
                },
                "type": "oauth2",
              },
            },
            "process": [Function],
          },
          "tags": Object {
            "items": Array [
              Object {
                "description": "Pets operations",
                "externalDocs": Object {
                  "description": "pet docs",
                  "url": "http://example.com/pet",
                },
                "name": "pet",
              },
              Object {
                "description": "Vegetable",
                "name": "carrot",
              },
            ],
            "process": [Function],
          },
          "termsOfService": "",
        },
      },
    },
  },
}
`;

exports[`Index functional Index full with object output. 2`] = `
Object {
  "1": Object {
    "0": Object {
      "0": Object {
        "swaggerSrc": Object {
          "basePath": "{{apiBasePath}}",
          "consumes": "[{{#consumes}}\\"{{mime.type}}\\"{{#mime.comma}}, {{/mime.comma}}{{/consumes}}]",
          "contact": "{{=<% %>=}}{<%={{ }}=%> \\"name\\": \\"{{contact.name}}\\", \\"url\\": \\"{{&contact.url}}\\", \\"email\\": \\"{{contact.email}}\\" {{=<% %>=}}}<%={{ }}=%>",
          "definitions": "{{#definitions}}{{&process}}{{/definitions}}",
          "description": "{{apiDescription}}",
          "destinationTemplate": "{{=<% %>=}}{<%={{ }}=%>\\"swagger\\": \\"2.0\\", \\"info\\": {{=<% %>=}}{<%={{ }}=%> \\"title\\": \\"{{> title}}\\", {{#description}}\\"description\\": \\"{{> description}}\\",{{/description}} {{#termsOfService}}\\"termsOfService\\": \\"{{> termsOfService}}\\",{{/termsOfService}} \\"version\\": \\"{{> version}}\\", {{#contact}}\\"contact\\": {{> contact}},{{/contact}} {{#license}}\\"license\\": {{> license}}{{/license}}{{=<% %>=}}}<%={{ }}=%>, {{#host}}\\"host\\": \\"{{> host}}\\",{{/host}} {{#basePath}}\\"basePath\\": \\"{{> basePath}}\\",{{/basePath}} {{#schemes}}\\"schemes\\": {{> schemes}}, {{/schemes}} {{#consumes}}\\"consumes\\": {{> consumes}}, {{/consumes}} {{#produces}}\\"produces\\": {{> produces}}, {{/produces}} \\"paths\\": {}, {{#definitions}}\\"definitions\\": {{> definitions}},{{/definitions}} {{#parameters}}\\"parameters\\": {{> parameters }},{{/parameters}} {{#responses}}\\"responses\\": {{> responses }},{{/responses}} {{#securityDefinitions}}\\"securityDefinitions\\": {{> securityDefinitions}},{{/securityDefinitions}} {{#security}}\\"security\\": {{> security}},{{/security}} {{#tags}}\\"tags\\": {{> tags}},{{/tags}} {{#externalDocs}}\\"externalDocs\\": {{> externalDocs}}{{/externalDocs}} {{=<% %>=}}}<%={{ }}=%>",
          "externalDocs": "{{#externalDocs}}{{=<% %>=}}{<%={{ }}=%>{{#description}}\\"description\\": \\"{{description}}\\", {{/description}}\\"url\\": \\"{{&url}}\\"{{=<% %>=}}}<%={{ }}=%>{{/externalDocs}}",
          "host": "{{apiHost}}",
          "license": "{{=<% %>=}}{ \\"name\\": \\"<%license.name%>\\", \\"url\\": \\"<%&license.url%>\\"}<%={{ }}=%>",
          "parameters": "{{#parameters}}{{&process}}{{/parameters}}",
          "produces": "[{{#produces}}\\"{{mime.type}}\\"{{#mime.comma}}, {{/mime.comma}}{{/produces}}]",
          "responses": "{{#responses}}{{&process}}{{/responses}}",
          "schemes": "{{#schemes}}{{&process}}{{/schemes}}",
          "security": "{{#security}}{{&process}}{{/security}}",
          "securityDefinitions": "{{#securityDefinitions}}{{&process}}{{/securityDefinitions}}",
          "tags": "{{#tags}}{{&process}}{{/tags}}",
          "termsOfService": "{{&termsOfService}}",
          "title": "{{apiName}}",
          "version": "{{#apiVersion}}{{apiVersion}}{{/apiVersion}}{{^apiVersion}}{{apiSemver}}{{/apiVersion}}",
        },
      },
    },
    "1": Object {
      "0": Object {
        "swaggerSrc": Object {
          "basePath": "{{apiBasePath}}",
          "consumes": "[{{#consumes}}\\"{{mime.type}}\\"{{#mime.comma}}, {{/mime.comma}}{{/consumes}}]",
          "contact": "{{=<% %>=}}{<%={{ }}=%> \\"name\\": \\"{{contact.name}}\\", \\"url\\": \\"{{&contact.url}}\\", \\"email\\": \\"{{contact.email}}\\" {{=<% %>=}}}<%={{ }}=%>",
          "definitions": "{{#definitions}}{{&process}}{{/definitions}}",
          "description": "{{apiDescription}}",
          "destinationTemplate": "{{=<% %>=}}{<%={{ }}=%>\\"swagger\\": \\"2.0\\", \\"info\\": {{=<% %>=}}{<%={{ }}=%> \\"title\\": \\"{{> title}}\\", {{#description}}\\"description\\": \\"{{> description}}\\",{{/description}} {{#termsOfService}}\\"termsOfService\\": \\"{{> termsOfService}}\\",{{/termsOfService}} \\"version\\": \\"{{> version}}\\", {{#contact}}\\"contact\\": {{> contact}},{{/contact}} {{#license}}\\"license\\": {{> license}}{{/license}}{{=<% %>=}}}<%={{ }}=%>, {{#host}}\\"host\\": \\"{{> host}}\\",{{/host}} {{#basePath}}\\"basePath\\": \\"{{> basePath}}\\",{{/basePath}} {{#schemes}}\\"schemes\\": {{> schemes}}, {{/schemes}} {{#consumes}}\\"consumes\\": {{> consumes}}, {{/consumes}} {{#produces}}\\"produces\\": {{> produces}}, {{/produces}} \\"paths\\": {}, {{#definitions}}\\"definitions\\": {{> definitions}},{{/definitions}} {{#parameters}}\\"parameters\\": {{> parameters }},{{/parameters}} {{#responses}}\\"responses\\": {{> responses }},{{/responses}} {{#securityDefinitions}}\\"securityDefinitions\\": {{> securityDefinitions}},{{/securityDefinitions}} {{#security}}\\"security\\": {{> security}},{{/security}} {{#tags}}\\"tags\\": {{> tags}},{{/tags}} {{#externalDocs}}\\"externalDocs\\": {{> externalDocs}}{{/externalDocs}} {{=<% %>=}}}<%={{ }}=%>",
          "externalDocs": "{{#externalDocs}}{{=<% %>=}}{<%={{ }}=%>{{#description}}\\"description\\": \\"{{description}}\\", {{/description}}\\"url\\": \\"{{&url}}\\"{{=<% %>=}}}<%={{ }}=%>{{/externalDocs}}",
          "host": "{{apiHost}}",
          "license": "{{=<% %>=}}{ \\"name\\": \\"<%license.name%>\\", \\"url\\": \\"<%&license.url%>\\"}<%={{ }}=%>",
          "parameters": "{{#parameters}}{{&process}}{{/parameters}}",
          "produces": "[{{#produces}}\\"{{mime.type}}\\"{{#mime.comma}}, {{/mime.comma}}{{/produces}}]",
          "responses": "{{#responses}}{{&process}}{{/responses}}",
          "schemes": "{{#schemes}}{{&process}}{{/schemes}}",
          "security": "{{#security}}{{&process}}{{/security}}",
          "securityDefinitions": "{{#securityDefinitions}}{{&process}}{{/securityDefinitions}}",
          "tags": "{{#tags}}{{&process}}{{/tags}}",
          "termsOfService": "{{&termsOfService}}",
          "title": "{{apiName}}",
          "version": "{{#apiVersion}}{{apiVersion}}{{/apiVersion}}{{^apiVersion}}{{apiSemver}}{{/apiVersion}}",
        },
      },
      "1": Object {
        "swaggerSrc": Object {
          "basePath": "{{apiBasePath}}",
          "consumes": "[{{#consumes}}\\"{{mime.type}}\\"{{#mime.comma}}, {{/mime.comma}}{{/consumes}}]",
          "contact": "{{=<% %>=}}{<%={{ }}=%> \\"name\\": \\"{{contact.name}}\\", \\"url\\": \\"{{&contact.url}}\\", \\"email\\": \\"{{contact.email}}\\" {{=<% %>=}}}<%={{ }}=%>",
          "definitions": "{{#definitions}}{{&process}}{{/definitions}}",
          "description": "{{apiDescription}}",
          "destinationTemplate": "{{=<% %>=}}{<%={{ }}=%>\\"swagger\\": \\"2.0\\", \\"info\\": {{=<% %>=}}{<%={{ }}=%> \\"title\\": \\"{{> title}}\\", {{#description}}\\"description\\": \\"{{> description}}\\",{{/description}} {{#termsOfService}}\\"termsOfService\\": \\"{{> termsOfService}}\\",{{/termsOfService}} \\"version\\": \\"{{> version}}\\", {{#contact}}\\"contact\\": {{> contact}},{{/contact}} {{#license}}\\"license\\": {{> license}}{{/license}}{{=<% %>=}}}<%={{ }}=%>, {{#host}}\\"host\\": \\"{{> host}}\\",{{/host}} {{#basePath}}\\"basePath\\": \\"{{> basePath}}\\",{{/basePath}} {{#schemes}}\\"schemes\\": {{> schemes}}, {{/schemes}} {{#consumes}}\\"consumes\\": {{> consumes}}, {{/consumes}} {{#produces}}\\"produces\\": {{> produces}}, {{/produces}} \\"paths\\": {}, {{#definitions}}\\"definitions\\": {{> definitions}},{{/definitions}} {{#parameters}}\\"parameters\\": {{> parameters }},{{/parameters}} {{#responses}}\\"responses\\": {{> responses }},{{/responses}} {{#securityDefinitions}}\\"securityDefinitions\\": {{> securityDefinitions}},{{/securityDefinitions}} {{#security}}\\"security\\": {{> security}},{{/security}} {{#tags}}\\"tags\\": {{> tags}},{{/tags}} {{#externalDocs}}\\"externalDocs\\": {{> externalDocs}}{{/externalDocs}} {{=<% %>=}}}<%={{ }}=%>",
          "externalDocs": "{{#externalDocs}}{{=<% %>=}}{<%={{ }}=%>{{#description}}\\"description\\": \\"{{description}}\\", {{/description}}\\"url\\": \\"{{&url}}\\"{{=<% %>=}}}<%={{ }}=%>{{/externalDocs}}",
          "host": "{{apiHost}}",
          "license": "{{=<% %>=}}{ \\"name\\": \\"<%license.name%>\\", \\"url\\": \\"<%&license.url%>\\"}<%={{ }}=%>",
          "parameters": "{{#parameters}}{{&process}}{{/parameters}}",
          "produces": "[{{#produces}}\\"{{mime.type}}\\"{{#mime.comma}}, {{/mime.comma}}{{/produces}}]",
          "responses": "{{#responses}}{{&process}}{{/responses}}",
          "schemes": "{{#schemes}}{{&process}}{{/schemes}}",
          "security": "{{#security}}{{&process}}{{/security}}",
          "securityDefinitions": "{{#securityDefinitions}}{{&process}}{{/securityDefinitions}}",
          "tags": "{{#tags}}{{&process}}{{/tags}}",
          "termsOfService": "{{&termsOfService}}",
          "title": "{{apiName}}",
          "version": "{{#apiVersion}}{{apiVersion}}{{/apiVersion}}{{^apiVersion}}{{apiSemver}}{{/apiVersion}}",
        },
      },
    },
  },
}
`;

exports[`Index functional Index full with object output. 3`] = `
Object {
  "1": Object {
    "0": Object {
      "0": Object {
        "swaggerSrc": Object {
          "processTemplates": Array [
            Array [
              Object {
                "destination": Object {
                  "target": "swaggerSrc",
                },
                "holdOvers": Object {
                  "apiSemver": "1.0.0",
                },
                "source": Object {
                  "plugin": "originalSchemeSource",
                  "target": "swaggerSrc",
                },
                "templateObject": Object {
                  "basePath": "{{apiBasePath}}",
                  "consumes": "[{{#consumes}}\\"{{mime.type}}\\"{{#mime.comma}}, {{/mime.comma}}{{/consumes}}]",
                  "contact": "{{=<% %>=}}{<%={{ }}=%> \\"name\\": \\"{{contact.name}}\\", \\"url\\": \\"{{&contact.url}}\\", \\"email\\": \\"{{contact.email}}\\" {{=<% %>=}}}<%={{ }}=%>",
                  "definitions": "{{#definitions}}{{&process}}{{/definitions}}",
                  "description": "{{apiDescription}}",
                  "destinationTemplate": "{{=<% %>=}}{<%={{ }}=%>\\"swagger\\": \\"2.0\\", \\"info\\": {{=<% %>=}}{<%={{ }}=%> \\"title\\": \\"{{> title}}\\", {{#description}}\\"description\\": \\"{{> description}}\\",{{/description}} {{#termsOfService}}\\"termsOfService\\": \\"{{> termsOfService}}\\",{{/termsOfService}} \\"version\\": \\"{{> version}}\\", {{#contact}}\\"contact\\": {{> contact}},{{/contact}} {{#license}}\\"license\\": {{> license}}{{/license}}{{=<% %>=}}}<%={{ }}=%>, {{#host}}\\"host\\": \\"{{> host}}\\",{{/host}} {{#basePath}}\\"basePath\\": \\"{{> basePath}}\\",{{/basePath}} {{#schemes}}\\"schemes\\": {{> schemes}}, {{/schemes}} {{#consumes}}\\"consumes\\": {{> consumes}}, {{/consumes}} {{#produces}}\\"produces\\": {{> produces}}, {{/produces}} \\"paths\\": {}, {{#definitions}}\\"definitions\\": {{> definitions}},{{/definitions}} {{#parameters}}\\"parameters\\": {{> parameters }},{{/parameters}} {{#responses}}\\"responses\\": {{> responses }},{{/responses}} {{#securityDefinitions}}\\"securityDefinitions\\": {{> securityDefinitions}},{{/securityDefinitions}} {{#security}}\\"security\\": {{> security}},{{/security}} {{#tags}}\\"tags\\": {{> tags}},{{/tags}} {{#externalDocs}}\\"externalDocs\\": {{> externalDocs}}{{/externalDocs}} {{=<% %>=}}}<%={{ }}=%>",
                  "externalDocs": "{{#externalDocs}}{{=<% %>=}}{<%={{ }}=%>{{#description}}\\"description\\": \\"{{description}}\\", {{/description}}\\"url\\": \\"{{&url}}\\"{{=<% %>=}}}<%={{ }}=%>{{/externalDocs}}",
                  "host": "{{apiHost}}",
                  "license": "{{=<% %>=}}{ \\"name\\": \\"<%license.name%>\\", \\"url\\": \\"<%&license.url%>\\"}<%={{ }}=%>",
                  "parameters": "{{#parameters}}{{&process}}{{/parameters}}",
                  "produces": "[{{#produces}}\\"{{mime.type}}\\"{{#mime.comma}}, {{/mime.comma}}{{/produces}}]",
                  "responses": "{{#responses}}{{&process}}{{/responses}}",
                  "schemes": "{{#schemes}}{{&process}}{{/schemes}}",
                  "security": "{{#security}}{{&process}}{{/security}}",
                  "securityDefinitions": "{{#securityDefinitions}}{{&process}}{{/securityDefinitions}}",
                  "tags": "{{#tags}}{{&process}}{{/tags}}",
                  "termsOfService": "{{&termsOfService}}",
                  "title": "{{apiName}}",
                  "version": "{{#apiVersion}}{{apiVersion}}{{/apiVersion}}{{^apiVersion}}{{apiSemver}}{{/apiVersion}}",
                },
                "transform": Object {
                  "plugin": "tokenTemplateValues",
                },
              },
            ],
          ],
        },
      },
    },
    "1": Object {
      "0": Object {
        "swaggerSrc": Object {
          "processTemplates": Array [
            Array [
              Object {
                "destination": Object {
                  "target": "swaggerSrc",
                },
                "holdOvers": Object {
                  "apiSemver": "1.1.0",
                },
                "source": Object {
                  "plugin": "originalSchemeSource",
                  "target": "swaggerSrc",
                },
                "templateObject": Object {
                  "basePath": "{{apiBasePath}}",
                  "consumes": "[{{#consumes}}\\"{{mime.type}}\\"{{#mime.comma}}, {{/mime.comma}}{{/consumes}}]",
                  "contact": "{{=<% %>=}}{<%={{ }}=%> \\"name\\": \\"{{contact.name}}\\", \\"url\\": \\"{{&contact.url}}\\", \\"email\\": \\"{{contact.email}}\\" {{=<% %>=}}}<%={{ }}=%>",
                  "definitions": "{{#definitions}}{{&process}}{{/definitions}}",
                  "description": "{{apiDescription}}",
                  "destinationTemplate": "{{=<% %>=}}{<%={{ }}=%>\\"swagger\\": \\"2.0\\", \\"info\\": {{=<% %>=}}{<%={{ }}=%> \\"title\\": \\"{{> title}}\\", {{#description}}\\"description\\": \\"{{> description}}\\",{{/description}} {{#termsOfService}}\\"termsOfService\\": \\"{{> termsOfService}}\\",{{/termsOfService}} \\"version\\": \\"{{> version}}\\", {{#contact}}\\"contact\\": {{> contact}},{{/contact}} {{#license}}\\"license\\": {{> license}}{{/license}}{{=<% %>=}}}<%={{ }}=%>, {{#host}}\\"host\\": \\"{{> host}}\\",{{/host}} {{#basePath}}\\"basePath\\": \\"{{> basePath}}\\",{{/basePath}} {{#schemes}}\\"schemes\\": {{> schemes}}, {{/schemes}} {{#consumes}}\\"consumes\\": {{> consumes}}, {{/consumes}} {{#produces}}\\"produces\\": {{> produces}}, {{/produces}} \\"paths\\": {}, {{#definitions}}\\"definitions\\": {{> definitions}},{{/definitions}} {{#parameters}}\\"parameters\\": {{> parameters }},{{/parameters}} {{#responses}}\\"responses\\": {{> responses }},{{/responses}} {{#securityDefinitions}}\\"securityDefinitions\\": {{> securityDefinitions}},{{/securityDefinitions}} {{#security}}\\"security\\": {{> security}},{{/security}} {{#tags}}\\"tags\\": {{> tags}},{{/tags}} {{#externalDocs}}\\"externalDocs\\": {{> externalDocs}}{{/externalDocs}} {{=<% %>=}}}<%={{ }}=%>",
                  "externalDocs": "{{#externalDocs}}{{=<% %>=}}{<%={{ }}=%>{{#description}}\\"description\\": \\"{{description}}\\", {{/description}}\\"url\\": \\"{{&url}}\\"{{=<% %>=}}}<%={{ }}=%>{{/externalDocs}}",
                  "host": "{{apiHost}}",
                  "license": "{{=<% %>=}}{ \\"name\\": \\"<%license.name%>\\", \\"url\\": \\"<%&license.url%>\\"}<%={{ }}=%>",
                  "parameters": "{{#parameters}}{{&process}}{{/parameters}}",
                  "produces": "[{{#produces}}\\"{{mime.type}}\\"{{#mime.comma}}, {{/mime.comma}}{{/produces}}]",
                  "responses": "{{#responses}}{{&process}}{{/responses}}",
                  "schemes": "{{#schemes}}{{&process}}{{/schemes}}",
                  "security": "{{#security}}{{&process}}{{/security}}",
                  "securityDefinitions": "{{#securityDefinitions}}{{&process}}{{/securityDefinitions}}",
                  "tags": "{{#tags}}{{&process}}{{/tags}}",
                  "termsOfService": "{{&termsOfService}}",
                  "title": "{{apiName}}",
                  "version": "{{#apiVersion}}{{apiVersion}}{{/apiVersion}}{{^apiVersion}}{{apiSemver}}{{/apiVersion}}",
                },
                "transform": Object {
                  "plugin": "tokenTemplateValues",
                },
              },
            ],
          ],
        },
      },
      "1": Object {
        "swaggerSrc": Object {
          "processTemplates": Array [
            Array [
              Object {
                "destination": Object {
                  "target": "swaggerSrc",
                },
                "holdOvers": Object {
                  "apiSemver": "1.1.1",
                },
                "source": Object {
                  "plugin": "originalSchemeSource",
                  "target": "swaggerSrc",
                },
                "templateObject": Object {
                  "basePath": "{{apiBasePath}}",
                  "consumes": "[{{#consumes}}\\"{{mime.type}}\\"{{#mime.comma}}, {{/mime.comma}}{{/consumes}}]",
                  "contact": "{{=<% %>=}}{<%={{ }}=%> \\"name\\": \\"{{contact.name}}\\", \\"url\\": \\"{{&contact.url}}\\", \\"email\\": \\"{{contact.email}}\\" {{=<% %>=}}}<%={{ }}=%>",
                  "definitions": "{{#definitions}}{{&process}}{{/definitions}}",
                  "description": "{{apiDescription}}",
                  "destinationTemplate": "{{=<% %>=}}{<%={{ }}=%>\\"swagger\\": \\"2.0\\", \\"info\\": {{=<% %>=}}{<%={{ }}=%> \\"title\\": \\"{{> title}}\\", {{#description}}\\"description\\": \\"{{> description}}\\",{{/description}} {{#termsOfService}}\\"termsOfService\\": \\"{{> termsOfService}}\\",{{/termsOfService}} \\"version\\": \\"{{> version}}\\", {{#contact}}\\"contact\\": {{> contact}},{{/contact}} {{#license}}\\"license\\": {{> license}}{{/license}}{{=<% %>=}}}<%={{ }}=%>, {{#host}}\\"host\\": \\"{{> host}}\\",{{/host}} {{#basePath}}\\"basePath\\": \\"{{> basePath}}\\",{{/basePath}} {{#schemes}}\\"schemes\\": {{> schemes}}, {{/schemes}} {{#consumes}}\\"consumes\\": {{> consumes}}, {{/consumes}} {{#produces}}\\"produces\\": {{> produces}}, {{/produces}} \\"paths\\": {}, {{#definitions}}\\"definitions\\": {{> definitions}},{{/definitions}} {{#parameters}}\\"parameters\\": {{> parameters }},{{/parameters}} {{#responses}}\\"responses\\": {{> responses }},{{/responses}} {{#securityDefinitions}}\\"securityDefinitions\\": {{> securityDefinitions}},{{/securityDefinitions}} {{#security}}\\"security\\": {{> security}},{{/security}} {{#tags}}\\"tags\\": {{> tags}},{{/tags}} {{#externalDocs}}\\"externalDocs\\": {{> externalDocs}}{{/externalDocs}} {{=<% %>=}}}<%={{ }}=%>",
                  "externalDocs": "{{#externalDocs}}{{=<% %>=}}{<%={{ }}=%>{{#description}}\\"description\\": \\"{{description}}\\", {{/description}}\\"url\\": \\"{{&url}}\\"{{=<% %>=}}}<%={{ }}=%>{{/externalDocs}}",
                  "host": "{{apiHost}}",
                  "license": "{{=<% %>=}}{ \\"name\\": \\"<%license.name%>\\", \\"url\\": \\"<%&license.url%>\\"}<%={{ }}=%>",
                  "parameters": "{{#parameters}}{{&process}}{{/parameters}}",
                  "produces": "[{{#produces}}\\"{{mime.type}}\\"{{#mime.comma}}, {{/mime.comma}}{{/produces}}]",
                  "responses": "{{#responses}}{{&process}}{{/responses}}",
                  "schemes": "{{#schemes}}{{&process}}{{/schemes}}",
                  "security": "{{#security}}{{&process}}{{/security}}",
                  "securityDefinitions": "{{#securityDefinitions}}{{&process}}{{/securityDefinitions}}",
                  "tags": "{{#tags}}{{&process}}{{/tags}}",
                  "termsOfService": "{{&termsOfService}}",
                  "title": "{{apiName}}",
                  "version": "{{#apiVersion}}{{apiVersion}}{{/apiVersion}}{{^apiVersion}}{{apiSemver}}{{/apiVersion}}",
                },
                "transform": Object {
                  "plugin": "tokenTemplateValues",
                },
              },
            ],
          ],
        },
      },
    },
  },
}
`;

exports[`Index functional Index full with object output. 4`] = `
Object {
  "1": Object {
    "0": Object {
      "0": Object {
        "swagger": Object {
          "consumes": Array [
            "vnd.api+json",
          ],
          "definitions": Object {
            "example": Object {
              "properties": Object {
                "id": Object {
                  "format": "int64",
                  "type": "integer",
                },
                "name": Object {
                  "type": "string",
                },
              },
              "type": "object",
            },
            "example2": Object {
              "properties": Object {
                "name": Object {
                  "type": "string",
                },
              },
              "type": "object",
            },
          },
          "externalDocs": Object {
            "description": "Further api docs",
            "url": "http://example.com/docs",
          },
          "info": Object {
            "contact": Object {
              "email": "example@example.com",
              "name": "Dave Example",
              "url": "http://example.com",
            },
            "license": Object {
              "name": "apache 2.0",
              "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
            },
            "title": "Swagger Example APi",
            "version": "1.0.0",
          },
          "parameters": Object {
            "skipParam": Object {
              "description": "number of items to skip",
              "format": "int32",
              "in": "query",
              "name": "skip",
              "required": true,
              "type": "integer",
            },
          },
          "paths": Object {},
          "produces": Array [
            "vnd.api+json",
          ],
          "responses": Object {
            "GeneralError": Object {
              "description": "General Error",
            },
            "IllegalInput": Object {
              "description": "Illegal input for operation.",
            },
            "notFound": Object {
              "description": "Entity not found.",
            },
          },
          "schemes": Array [
            "https",
            "http",
          ],
          "security": Object {
            "petstore_auth": Array [
              "write:pets",
              "read:pets",
            ],
          },
          "securityDefinitions": Object {
            "api_key": Object {
              "in": "header",
              "name": "api_key",
              "type": "apiKey",
            },
            "petstore_auth": Object {
              "authorizationUrl": "http://swagger.io/api/oauth/dialog",
              "flow": "implicit",
              "scopes": Object {
                "read.pets": "read your pets",
                "write.pets": "modify pets in your account",
              },
              "type": "oauth2",
            },
          },
          "swagger": "2.0",
          "tags": Array [
            Object {
              "description": "Pets operations",
              "externalDocs": Object {
                "description": "pet docs",
                "url": "http://example.com/pet",
              },
              "name": "pet",
            },
            Object {
              "description": "Vegetable",
              "name": "carrot",
            },
          ],
        },
      },
    },
    "1": Object {
      "0": Object {
        "swagger": Object {
          "consumes": Array [
            "vnd.api+json",
          ],
          "definitions": Object {
            "example": Object {
              "properties": Object {
                "id": Object {
                  "format": "int64",
                  "type": "integer",
                },
                "name": Object {
                  "type": "string",
                },
              },
              "type": "object",
            },
            "example2": Object {
              "properties": Object {
                "name": Object {
                  "type": "string",
                },
              },
              "type": "object",
            },
          },
          "externalDocs": Object {
            "description": "Further api docs",
            "url": "http://example.com/docs",
          },
          "info": Object {
            "contact": Object {
              "email": "example@example.com",
              "name": "Dave Example",
              "url": "http://example.com",
            },
            "license": Object {
              "name": "apache 2.0",
              "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
            },
            "title": "Swagger Example APi",
            "version": "1.1.0",
          },
          "parameters": Object {
            "skipParam": Object {
              "description": "number of items to skip",
              "format": "int32",
              "in": "query",
              "name": "skip",
              "required": true,
              "type": "integer",
            },
          },
          "paths": Object {},
          "produces": Array [
            "vnd.api+json",
          ],
          "responses": Object {
            "GeneralError": Object {
              "description": "General Error",
            },
            "IllegalInput": Object {
              "description": "Illegal input for operation.",
            },
            "notFound": Object {
              "description": "Entity not found.",
            },
          },
          "schemes": Array [
            "https",
            "http",
          ],
          "security": Object {
            "petstore_auth": Array [
              "write:pets",
              "read:pets",
            ],
          },
          "securityDefinitions": Object {
            "api_key": Object {
              "in": "header",
              "name": "api_key",
              "type": "apiKey",
            },
            "petstore_auth": Object {
              "authorizationUrl": "http://swagger.io/api/oauth/dialog",
              "flow": "implicit",
              "scopes": Object {
                "read.pets": "read your pets",
                "write.pets": "modify pets in your account",
              },
              "type": "oauth2",
            },
          },
          "swagger": "2.0",
          "tags": Array [
            Object {
              "description": "Pets operations",
              "externalDocs": Object {
                "description": "pet docs",
                "url": "http://example.com/pet",
              },
              "name": "pet",
            },
            Object {
              "description": "Vegetable",
              "name": "carrot",
            },
          ],
        },
      },
      "1": Object {
        "swagger": Object {
          "consumes": Array [
            "vnd.api+json",
          ],
          "definitions": Object {
            "example": Object {
              "properties": Object {
                "id": Object {
                  "format": "int64",
                  "type": "integer",
                },
                "name": Object {
                  "type": "string",
                },
              },
              "type": "object",
            },
            "example2": Object {
              "properties": Object {
                "name": Object {
                  "type": "string",
                },
              },
              "type": "object",
            },
          },
          "externalDocs": Object {
            "description": "Further api docs",
            "url": "http://example.com/docs",
          },
          "info": Object {
            "contact": Object {
              "email": "example@example.com",
              "name": "Dave Example",
              "url": "http://example.com",
            },
            "license": Object {
              "name": "apache 2.0",
              "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
            },
            "title": "Swagger Example APi",
            "version": "1.1.1",
          },
          "parameters": Object {
            "skipParam": Object {
              "description": "number of items to skip",
              "format": "int32",
              "in": "query",
              "name": "skip",
              "required": true,
              "type": "integer",
            },
          },
          "paths": Object {},
          "produces": Array [
            "vnd.api+json",
          ],
          "responses": Object {
            "GeneralError": Object {
              "description": "General Error",
            },
            "IllegalInput": Object {
              "description": "Illegal input for operation.",
            },
            "notFound": Object {
              "description": "Entity not found.",
            },
          },
          "schemes": Array [
            "https",
            "http",
          ],
          "security": Object {
            "petstore_auth": Array [
              "write:pets",
              "read:pets",
            ],
          },
          "securityDefinitions": Object {
            "api_key": Object {
              "in": "header",
              "name": "api_key",
              "type": "apiKey",
            },
            "petstore_auth": Object {
              "authorizationUrl": "http://swagger.io/api/oauth/dialog",
              "flow": "implicit",
              "scopes": Object {
                "read.pets": "read your pets",
                "write.pets": "modify pets in your account",
              },
              "type": "oauth2",
            },
          },
          "swagger": "2.0",
          "tags": Array [
            Object {
              "description": "Pets operations",
              "externalDocs": Object {
                "description": "pet docs",
                "url": "http://example.com/pet",
              },
              "name": "pet",
            },
            Object {
              "description": "Vegetable",
              "name": "carrot",
            },
          ],
        },
      },
    },
  },
}
`;

exports[`Index functional simple swagger Src Simple swagger src.. 1`] = `
Object {
  "1": Object {
    "0": Object {
      "0": Object {
        "swaggerSrc": Object {
          "apiBasePath": "/api",
          "apiDescription": "An example Api for example corp.",
          "apiHost": "example.com",
          "apiName": "Swagger Example APi",
          "consumes": Array [
            Object {
              "mime": Object {
                "comma": false,
                "type": "vnd.api+json",
              },
            },
          ],
          "contact": Object {
            "email": "example@example.com",
            "name": "Dave Example",
            "url": "http://example.com",
          },
          "definitions": Object {
            "items": Object {
              "example": Object {
                "properties": Object {
                  "id": Object {
                    "format": "int64",
                    "type": "integer",
                  },
                  "name": Object {
                    "type": "string",
                  },
                },
                "type": "object",
              },
              "example2": Object {
                "properties": Object {
                  "name": Object {
                    "type": "string",
                  },
                },
                "type": "object",
              },
            },
            "process": [Function],
          },
          "externalDocs": Object {
            "description": "Further api docs",
            "url": "http://example.com/docs",
          },
          "license": Object {
            "name": "apache 2.0",
            "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
          },
          "parameters": Object {
            "items": Object {
              "skipParam": Object {
                "description": "number of items to skip",
                "format": "int32",
                "in": "query",
                "name": "skip",
                "required": true,
                "type": "integer",
              },
            },
            "process": [Function],
          },
          "produces": Array [
            Object {
              "mime": Object {
                "comma": false,
                "type": "vnd.api+json",
              },
            },
          ],
          "responses": Object {
            "items": Object {
              "GeneralError": Object {
                "description": "General Error",
              },
              "IllegalInput": Object {
                "description": "Illegal input for operation.",
              },
              "notFound": Object {
                "description": "Entity not found.",
              },
            },
            "process": [Function],
          },
          "schemes": Object {
            "items": Array [
              "https",
              "http",
            ],
            "process": [Function],
          },
          "security": Object {
            "items": Object {
              "petstore_auth": Array [
                "write:pets",
                "read:pets",
              ],
            },
            "process": [Function],
          },
          "securityDefinitions": Object {
            "items": Object {
              "api_key": Object {
                "in": "header",
                "name": "api_key",
                "type": "apiKey",
              },
              "petstore_auth": Object {
                "authorizationUrl": "http://swagger.io/api/oauth/dialog",
                "flow": "implicit",
                "scopes": Object {
                  "read.pets": "read your pets",
                  "write.pets": "modify pets in your account",
                },
                "type": "oauth2",
              },
            },
            "process": [Function],
          },
          "tags": Object {
            "items": Array [
              Object {
                "description": "Pets operations",
                "externalDocs": Object {
                  "description": "pet docs",
                  "url": "http://example.com/pet",
                },
                "name": "pet",
              },
              Object {
                "description": "Vegetable",
                "name": "carrot",
              },
            ],
            "process": [Function],
          },
          "termsOfService": "",
        },
      },
    },
    "1": Object {
      "0": Object {
        "swaggerSrc": Object {
          "apiBasePath": "/api",
          "apiDescription": "An example Api for example corp.",
          "apiHost": "example.com",
          "apiName": "Swagger Example APi",
          "consumes": Array [
            Object {
              "mime": Object {
                "comma": false,
                "type": "vnd.api+json",
              },
            },
          ],
          "contact": Object {
            "email": "example@example.com",
            "name": "Dave Example",
            "url": "http://example.com",
          },
          "definitions": Object {
            "items": Object {
              "example": Object {
                "properties": Object {
                  "id": Object {
                    "format": "int64",
                    "type": "integer",
                  },
                  "name": Object {
                    "type": "string",
                  },
                },
                "type": "object",
              },
              "example2": Object {
                "properties": Object {
                  "name": Object {
                    "type": "string",
                  },
                },
                "type": "object",
              },
            },
            "process": [Function],
          },
          "externalDocs": Object {
            "description": "Further api docs",
            "url": "http://example.com/docs",
          },
          "license": Object {
            "name": "apache 2.0",
            "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
          },
          "parameters": Object {
            "items": Object {
              "skipParam": Object {
                "description": "number of items to skip",
                "format": "int32",
                "in": "query",
                "name": "skip",
                "required": true,
                "type": "integer",
              },
            },
            "process": [Function],
          },
          "produces": Array [
            Object {
              "mime": Object {
                "comma": false,
                "type": "vnd.api+json",
              },
            },
          ],
          "responses": Object {
            "items": Object {
              "GeneralError": Object {
                "description": "General Error",
              },
              "IllegalInput": Object {
                "description": "Illegal input for operation.",
              },
              "notFound": Object {
                "description": "Entity not found.",
              },
            },
            "process": [Function],
          },
          "schemes": Object {
            "items": Array [
              "https",
              "http",
            ],
            "process": [Function],
          },
          "security": Object {
            "items": Object {
              "petstore_auth": Array [
                "write:pets",
                "read:pets",
              ],
            },
            "process": [Function],
          },
          "securityDefinitions": Object {
            "items": Object {
              "api_key": Object {
                "in": "header",
                "name": "api_key",
                "type": "apiKey",
              },
              "petstore_auth": Object {
                "authorizationUrl": "http://swagger.io/api/oauth/dialog",
                "flow": "implicit",
                "scopes": Object {
                  "read.pets": "read your pets",
                  "write.pets": "modify pets in your account",
                },
                "type": "oauth2",
              },
            },
            "process": [Function],
          },
          "tags": Object {
            "items": Array [
              Object {
                "description": "Pets operations",
                "externalDocs": Object {
                  "description": "pet docs",
                  "url": "http://example.com/pet",
                },
                "name": "pet",
              },
              Object {
                "description": "Vegetable",
                "name": "carrot",
              },
            ],
            "process": [Function],
          },
          "termsOfService": "",
        },
      },
      "1": Object {
        "swaggerSrc": Object {
          "apiBasePath": "/api",
          "apiDescription": "An example Api for example corp.",
          "apiHost": "example.com",
          "apiName": "Swagger Example APi",
          "consumes": Array [
            Object {
              "mime": Object {
                "comma": false,
                "type": "vnd.api+json",
              },
            },
          ],
          "contact": Object {
            "email": "example@example.com",
            "name": "Dave Example",
            "url": "http://example.com",
          },
          "definitions": Object {
            "items": Object {
              "example": Object {
                "properties": Object {
                  "id": Object {
                    "format": "int64",
                    "type": "integer",
                  },
                  "name": Object {
                    "type": "string",
                  },
                },
                "type": "object",
              },
              "example2": Object {
                "properties": Object {
                  "name": Object {
                    "type": "string",
                  },
                },
                "type": "object",
              },
            },
            "process": [Function],
          },
          "externalDocs": Object {
            "description": "Further api docs",
            "url": "http://example.com/docs",
          },
          "license": Object {
            "name": "apache 2.0",
            "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
          },
          "parameters": Object {
            "items": Object {
              "skipParam": Object {
                "description": "number of items to skip",
                "format": "int32",
                "in": "query",
                "name": "skip",
                "required": true,
                "type": "integer",
              },
            },
            "process": [Function],
          },
          "produces": Array [
            Object {
              "mime": Object {
                "comma": false,
                "type": "vnd.api+json",
              },
            },
          ],
          "responses": Object {
            "items": Object {
              "GeneralError": Object {
                "description": "General Error",
              },
              "IllegalInput": Object {
                "description": "Illegal input for operation.",
              },
              "notFound": Object {
                "description": "Entity not found.",
              },
            },
            "process": [Function],
          },
          "schemes": Object {
            "items": Array [
              "https",
              "http",
            ],
            "process": [Function],
          },
          "security": Object {
            "items": Object {
              "petstore_auth": Array [
                "write:pets",
                "read:pets",
              ],
            },
            "process": [Function],
          },
          "securityDefinitions": Object {
            "items": Object {
              "api_key": Object {
                "in": "header",
                "name": "api_key",
                "type": "apiKey",
              },
              "petstore_auth": Object {
                "authorizationUrl": "http://swagger.io/api/oauth/dialog",
                "flow": "implicit",
                "scopes": Object {
                  "read.pets": "read your pets",
                  "write.pets": "modify pets in your account",
                },
                "type": "oauth2",
              },
            },
            "process": [Function],
          },
          "tags": Object {
            "items": Array [
              Object {
                "description": "Pets operations",
                "externalDocs": Object {
                  "description": "pet docs",
                  "url": "http://example.com/pet",
                },
                "name": "pet",
              },
              Object {
                "description": "Vegetable",
                "name": "carrot",
              },
            ],
            "process": [Function],
          },
          "termsOfService": "",
        },
      },
    },
  },
}
`;

exports[`Index functional simple swagger Src Simple swagger src.. 2`] = `
Object {
  "1": Object {
    "0": Object {
      "0": Object {
        "swagger": Object {
          "consumes": Array [
            "vnd.api+json",
          ],
          "definitions": Object {
            "example": Object {
              "properties": Object {
                "id": Object {
                  "format": "int64",
                  "type": "integer",
                },
                "name": Object {
                  "type": "string",
                },
              },
              "type": "object",
            },
            "example2": Object {
              "properties": Object {
                "name": Object {
                  "type": "string",
                },
              },
              "type": "object",
            },
          },
          "externalDocs": Object {
            "description": "Further api docs",
            "url": "http://example.com/docs",
          },
          "info": Object {
            "contact": Object {
              "email": "example@example.com",
              "name": "Dave Example",
              "url": "http://example.com",
            },
            "license": Object {
              "name": "apache 2.0",
              "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
            },
            "title": "Swagger Example APi",
            "version": "1.0.0",
          },
          "parameters": Object {
            "skipParam": Object {
              "description": "number of items to skip",
              "format": "int32",
              "in": "query",
              "name": "skip",
              "required": true,
              "type": "integer",
            },
          },
          "paths": Object {},
          "produces": Array [
            "vnd.api+json",
          ],
          "responses": Object {
            "GeneralError": Object {
              "description": "General Error",
            },
            "IllegalInput": Object {
              "description": "Illegal input for operation.",
            },
            "notFound": Object {
              "description": "Entity not found.",
            },
          },
          "schemes": Array [
            "https",
            "http",
          ],
          "security": Object {
            "petstore_auth": Array [
              "write:pets",
              "read:pets",
            ],
          },
          "securityDefinitions": Object {
            "api_key": Object {
              "in": "header",
              "name": "api_key",
              "type": "apiKey",
            },
            "petstore_auth": Object {
              "authorizationUrl": "http://swagger.io/api/oauth/dialog",
              "flow": "implicit",
              "scopes": Object {
                "read.pets": "read your pets",
                "write.pets": "modify pets in your account",
              },
              "type": "oauth2",
            },
          },
          "swagger": "2.0",
          "tags": Array [
            Object {
              "description": "Pets operations",
              "externalDocs": Object {
                "description": "pet docs",
                "url": "http://example.com/pet",
              },
              "name": "pet",
            },
            Object {
              "description": "Vegetable",
              "name": "carrot",
            },
          ],
        },
      },
    },
    "1": Object {
      "0": Object {
        "swagger": Object {
          "consumes": Array [
            "vnd.api+json",
          ],
          "definitions": Object {
            "example": Object {
              "properties": Object {
                "id": Object {
                  "format": "int64",
                  "type": "integer",
                },
                "name": Object {
                  "type": "string",
                },
              },
              "type": "object",
            },
            "example2": Object {
              "properties": Object {
                "name": Object {
                  "type": "string",
                },
              },
              "type": "object",
            },
          },
          "externalDocs": Object {
            "description": "Further api docs",
            "url": "http://example.com/docs",
          },
          "info": Object {
            "contact": Object {
              "email": "example@example.com",
              "name": "Dave Example",
              "url": "http://example.com",
            },
            "license": Object {
              "name": "apache 2.0",
              "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
            },
            "title": "Swagger Example APi",
            "version": "1.1.0",
          },
          "parameters": Object {
            "skipParam": Object {
              "description": "number of items to skip",
              "format": "int32",
              "in": "query",
              "name": "skip",
              "required": true,
              "type": "integer",
            },
          },
          "paths": Object {},
          "produces": Array [
            "vnd.api+json",
          ],
          "responses": Object {
            "GeneralError": Object {
              "description": "General Error",
            },
            "IllegalInput": Object {
              "description": "Illegal input for operation.",
            },
            "notFound": Object {
              "description": "Entity not found.",
            },
          },
          "schemes": Array [
            "https",
            "http",
          ],
          "security": Object {
            "petstore_auth": Array [
              "write:pets",
              "read:pets",
            ],
          },
          "securityDefinitions": Object {
            "api_key": Object {
              "in": "header",
              "name": "api_key",
              "type": "apiKey",
            },
            "petstore_auth": Object {
              "authorizationUrl": "http://swagger.io/api/oauth/dialog",
              "flow": "implicit",
              "scopes": Object {
                "read.pets": "read your pets",
                "write.pets": "modify pets in your account",
              },
              "type": "oauth2",
            },
          },
          "swagger": "2.0",
          "tags": Array [
            Object {
              "description": "Pets operations",
              "externalDocs": Object {
                "description": "pet docs",
                "url": "http://example.com/pet",
              },
              "name": "pet",
            },
            Object {
              "description": "Vegetable",
              "name": "carrot",
            },
          ],
        },
      },
      "1": Object {
        "swagger": Object {
          "consumes": Array [
            "vnd.api+json",
          ],
          "definitions": Object {
            "example": Object {
              "properties": Object {
                "id": Object {
                  "format": "int64",
                  "type": "integer",
                },
                "name": Object {
                  "type": "string",
                },
              },
              "type": "object",
            },
            "example2": Object {
              "properties": Object {
                "name": Object {
                  "type": "string",
                },
              },
              "type": "object",
            },
          },
          "externalDocs": Object {
            "description": "Further api docs",
            "url": "http://example.com/docs",
          },
          "info": Object {
            "contact": Object {
              "email": "example@example.com",
              "name": "Dave Example",
              "url": "http://example.com",
            },
            "license": Object {
              "name": "apache 2.0",
              "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
            },
            "title": "Swagger Example APi",
            "version": "1.1.1",
          },
          "parameters": Object {
            "skipParam": Object {
              "description": "number of items to skip",
              "format": "int32",
              "in": "query",
              "name": "skip",
              "required": true,
              "type": "integer",
            },
          },
          "paths": Object {},
          "produces": Array [
            "vnd.api+json",
          ],
          "responses": Object {
            "GeneralError": Object {
              "description": "General Error",
            },
            "IllegalInput": Object {
              "description": "Illegal input for operation.",
            },
            "notFound": Object {
              "description": "Entity not found.",
            },
          },
          "schemes": Array [
            "https",
            "http",
          ],
          "security": Object {
            "petstore_auth": Array [
              "write:pets",
              "read:pets",
            ],
          },
          "securityDefinitions": Object {
            "api_key": Object {
              "in": "header",
              "name": "api_key",
              "type": "apiKey",
            },
            "petstore_auth": Object {
              "authorizationUrl": "http://swagger.io/api/oauth/dialog",
              "flow": "implicit",
              "scopes": Object {
                "read.pets": "read your pets",
                "write.pets": "modify pets in your account",
              },
              "type": "oauth2",
            },
          },
          "swagger": "2.0",
          "tags": Array [
            Object {
              "description": "Pets operations",
              "externalDocs": Object {
                "description": "pet docs",
                "url": "http://example.com/pet",
              },
              "name": "pet",
            },
            Object {
              "description": "Vegetable",
              "name": "carrot",
            },
          ],
        },
      },
    },
  },
}
`;

exports[`Paths entity sp Guarantee Sp Guarantee same entities 1`] = `
Object {
  "1": Object {
    "0": Object {
      "0": Object {
        "example": Object {
          "schemes": Object {
            "processTemplates": Array [
              Array [
                Object {
                  "destination": Object {
                    "target": "swaggerSrc",
                  },
                  "source": Object {
                    "plugin": "originalSchemeSource",
                    "target": "swaggerSrc",
                  },
                  "transform": Object {
                    "plugin": "tokenTemplateValues",
                  },
                },
              ],
            ],
          },
        },
        "test": Object {
          "schemes": Object {
            "processTemplates": Array [
              Array [
                Object {
                  "destination": Object {
                    "target": "swaggerSrc",
                  },
                  "source": Object {
                    "plugin": "originalSchemeSource",
                    "target": "swaggerSrc",
                  },
                  "transform": Object {
                    "plugin": "tokenTemplateValues",
                  },
                },
              ],
            ],
          },
        },
      },
    },
  },
}
`;

exports[`Paths entity sp Guarantee no entities Sp Guarantee no entities 1`] = `
Object {
  "example": Object {
    "schemes": Object {
      "processTemplates": Array [
        Array [
          Object {
            "destination": Object {
              "target": "swaggerSrc",
            },
            "source": Object {
              "plugin": "originalSchemeSource",
              "target": "swaggerSrc",
            },
            "transform": Object {
              "plugin": "tokenTemplateValues",
            },
          },
        ],
      ],
    },
  },
  "test": Object {
    "schemes": Object {
      "processTemplates": Array [
        Array [
          Object {
            "destination": Object {
              "target": "swaggerSrc",
            },
            "source": Object {
              "plugin": "originalSchemeSource",
              "target": "swaggerSrc",
            },
            "transform": Object {
              "plugin": "tokenTemplateValues",
            },
          },
        ],
      ],
    },
  },
}
`;
